--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="nav__center">
           <div class="nav__header">
             <div class="nav__logo">
-              <h1>SHOPPY<span>Q</span></h1>
+              <h1>SHOPY<span>Q</span></h1>
             </div>
 
             <div class="nav__hamburger">
