--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="nav__center">
           <div class="nav__header">
             <div class="nav__logo">
-              <h1>SHOP<span>PQ</span></h1>
+              <h1>SHOP<span>PY</span></h1>
             </div>
 
             <div class="nav__hamburger">
@@ -109,7 +109,7 @@
         <h1>
           <span>Get <span class="color">50%</span> off your first shopping
             with</span>
-          <span>SHOPI<span class="color">Q</span> online shop</span>
+          <span>SHOP<span class="color">PY</span> online shop</span>
         </h1>
         <a href="#" class="btn btn-hero">shop now</a>
       </div>
@@ -962,7 +962,7 @@
                   <use xlink:href="./images/sprite.svg#icon-location"></use>
                 </svg>
               </span>
-              43 Dream House, Dreammy street, 7131 Dreamville, USA
+              Ram Teja Manchala
             </div>
             <div>
               <span>
