--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
                   <use xlink:href="./images/sprite.svg#icon-envelop"></use>
                 </svg>
               </span>
-            basudevnayak31@gmail.com
+            ramtejamanchala123@gmail.com
             </div>
             <div>
               <span>
@@ -978,7 +978,7 @@
                   <use xlink:href="./images/sprite.svg#icon-phone"></use>
                 </svg>
               </span>
-              7407-338-338
+              012-345-678
             </div>
             <div>
               <span>
@@ -986,7 +986,7 @@
                   <use xlink:href="./images/sprite.svg#icon-paperplane"></use>
                 </svg>
               </span>
-              Dream City, KOLKATA
+              Mancherial, Telangana
             </div>
           </div>
         </div>
