--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
           </div>
           <div class="footer-top__box">
             <h3>INFORMATION</h3>
-            <a href="https://ramteja18.netlify.app/">About Us</a>
+            <a href="https://ramteja18.netlify.app/" target="blank">About Us</a>
             <a href="#">Privacy Policy</a>
             <a href="#">Terms & Conditions</a>
             <a href="#">Contact Us</a>
