--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
             <a href="https://ramteja18.netlify.app/" target="blank">About Us</a>
             <a href="#">Privacy Policy</a>
             <a href="#">Terms & Conditions</a>
-            <a href="#">Contact Us</a>
+            <a href="hello.html">Contact Us</a>
             <a href="#">Site Map</a>
           </div>
           <div class="footer-top__box">
