--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
             <h3>INFORMATION</h3>
             <a href="https://ramteja18.netlify.app/" target="blank">About Us</a>
             <a href="#">Privacy Policy</a>
-            <a href="#">Terms & Conditions</a>
+            <a href="terms.html">Terms & Conditions</a>
             <a href="hello.html">Contact Us</a>
             <a href="#">Site Map</a>
           </div>
