--- a/index.html
+++ b/index.html
@@ -941,10 +941,10 @@
           <div class="footer-top__box">
             <h3>INFORMATION</h3>
             <a href="https://ramteja18.netlify.app/" target="blank">About Us</a>
-            <a href="#">Privacy Policy</a>
-            <a href="terms.html">Terms & Conditions</a>
-            <a href="hello.html">Contact Us</a>
-            <a href="#">Site Map</a>
+            <a href="priv.html" target="blank">Privacy Policy</a>
+            <a href="terms.html" target="blank">Terms & Conditions</a>
+            <a href="hello.html" target="blank">Contact Us</a>
+            <a href="site.html" target="blank">Site Map</a>
           </div>
           <div class="footer-top__box">
             <h3>MY ACCOUNT</h3>
