--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               </li>
 
               <li class="nav__item">
-                <a href="login.html" class="nav__link">Login</a>
+                <a href="login.html" target="blank" class="nav__link">Login</a>
               </li>
 
               <li class="nav__item">
