--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               </li>
 
               <li class="nav__item">
-                <a href="#" class="nav__link">Register</a>
+                <a href="register.html" class="nav__link">Register</a>
               </li>
             </ul>
 
