--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
+    <style>
     .form-style-9{
 	max-width: 450px;
 	background: #FAFAFA;
@@ -41,7 +41,8 @@
 	width: 49%;
 }
 .form-style-9 ul li .field-full{
-	width: 100%;
+	width: 49%;
+    height: 100px;
 }
 .form-style-9 ul li input.align-left{
 	float:left;
@@ -51,7 +52,6 @@
 }
 .form-style-9 ul li textarea{
 	width: 100%;
-	height: 100px;
 }
 .form-style-9 ul li input[type="button"], 
 .form-style-9 ul li input[type="submit"] {
@@ -80,21 +80,19 @@
 <ul>
 <li>
     <input type="text" name="field1" class="field-style field-split align-left" placeholder="Name" />
-    <input type="email" name="field2" class="field-style field-split align-right" placeholder="Email" />
 
 </li>
 <li>
+	<input type="email" name="field2" class="field-style field-split align-left" placeholder="Email" />
+</li>
+<li>
     <input type="text" name="field3" class="field-style field-split align-left" placeholder="Phone" />
-    <input type="url" name="field4" class="field-style field-split align-right" placeholder="Website" />
 </li>
 <li>
-<input type="text" name="field3" class="field-style field-full align-none" placeholder="Subject" />
+<input type="text" name="field3" class="field-style field-full align-none" placeholder="Address" />
 </li>
 <li>
-<textarea name="field5" class="field-style" placeholder="Message"></textarea>
-</li>
-<li>
-<input type="submit" value="Send Message" />
+<input type="submit" value="Submit" />
 </li>
 </ul>
 </form>
