--- a/register.html
+++ b/register.html
@@ -2,6 +2,9 @@
 <html>
     <head>
     <style>
+    .hi{
+    text-align: center;
+    }
     .form-style-9{
 	max-width: 400px;
 	background: #FAFAFA;
@@ -75,7 +78,7 @@
 </style>
     </head>
     <body>
-        <h1>Register Page</h1>
+        <h1 class="hi">Register Page</h1>
         <form class="form-style-9">
 <ul>
 <li>
@@ -91,8 +94,8 @@
 <li>
 <input type="text" name="field3" class="field-style field-full align-none" placeholder="Address" />
 </li>
-<li>
-<input type="submit" value="Submit" />
+<li class="hi">
+<input type="submit" value="Register" />
 </li>
 </ul>
 </form>
