--- a/register.html
+++ b/register.html
@@ -92,7 +92,10 @@
     <input type="text" name="field3" class="field-style field-split align-left" placeholder="Phone" />
 </li>
 <li>
-<input type="text" name="field3" class="field-style field-full align-none" placeholder="Address" />
+    <input type="text" name="field4" class="field-style field-split align-left" placeholder="Password" />
+</li>
+<li>
+<input type="text" name="field5" class="field-style field-full align-none" placeholder="Address" />
 </li>
 <li class="hi">
 <input type="submit" value="Register" />
