--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <svg>
                   <use xlink:href="./images/sprite.svg#icon-shopping-basket"></use>
                 </svg>
-                <span></span>
+                <span>2</span>
               </a>
             </ul>
           </div>
