--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
   <link rel="stylesheet" href="styles.css" />
 
   <title>MY SHOP</title>
+  <style>
+        	.footer{
+            width: 100vw;
+            height: 4rem;
+            background: rgb(40,40,40);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 300;
+            font-size: small;
+            color: white
+        }
+		</style>
 </head>
 
 <body>
@@ -1002,6 +1015,7 @@
   <!-- Custom Script -->
   <script src="./js/slider.js"></script>
   <script src="./js/index.js"></script>
+  <h1 class="footer"> Copyright &169; 2023 Ram Teja Manchala. All right received.</h1>
 </body>
 
 </html>
